--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<title>Hello World</title>
 	</head>
-	<body>
-		<h1>Hello World</h1>
+	<body bgcolor="#2ec7ab" style="margin: 0;">
+		<h1 style="font-family: sans-serif; color: white; padding: 40px;">Hello World</h1>
+		<img style="border-radius: 100%; border: 1px solid #fff; display: block; margin-left: auto; margin-right: auto;" src="https://avatars1.githubusercontent.com/u/20656139?s=460&amp;amp;v=4"/>
+		<h2 style="font-family: sans-serif; color: white; text-align: center;">Hey! That's me!</h2>
 	</body>
 </html>
